fixed button alignment

--- a/css/learning.css
+++ b/css/learning.css
@@ -1,5 +1,6 @@
 .page-description{
 	margin-top:10px;
+  text-align: center;
 }
 
 .grid {
